--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,5 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Dart",
-            "program": "bin/main.dart",
-            "request": "launch",
-            "type": "dart"
-        }
-    ]
+    "configurations": []
 }
