--- a/am_packages/pubspec.yaml
+++ b/am_packages/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.5
+  audioplayers: ^0.13.2
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +44,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
