--- a/ao_dart_oop/pubspec.yaml
+++ b/ao_dart_oop/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.5
   audioplayers: ^0.13.2
+  rflutter_alert: ^1.0.2
 
 dev_dependencies:
   flutter_test:
