--- a/aq-custom-widgets/pubspec.yaml
+++ b/aq-custom-widgets/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.5
   audioplayers: ^0.13.2
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   flutter_test:
