--- a/aab_first_program/pubspec.yaml
+++ b/aab_first_program/pubspec.yaml
@@ -1,4 +1,4 @@
-name: aa_first_program
+name: aab_first_program
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
