--- a/ah_icon_widget_sizedbox_widget/pubspec.yaml
+++ b/ah_icon_widget_sizedbox_widget/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ac_asset_images
+name: ah_icon_widget_sizedbox_widget
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
