--- a/aqa-custom-widgets-BMI/pubspec.yaml
+++ b/aqa-custom-widgets-BMI/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ac_asset_images
+name: aqa_custom_widgets_BMI
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
