--- a/aqc-navigation-BMI/pubspec.yaml
+++ b/aqc-navigation-BMI/pubspec.yaml
@@ -1,4 +1,4 @@
-name: au_navigation
+name: aqc_navigation_BMI
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
