--- a/aqb-push-pop-navigation/pubspec.yaml
+++ b/aqb-push-pop-navigation/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ac_asset_images
+name: aqb_push_pop_navigation
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
