--- a/at_rflutter_alert_demo/pubspec.yaml
+++ b/at_rflutter_alert_demo/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ac_asset_images
+name: at_rflutter_alert_de
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
