--- a/au_list_to_view_to_list/pubspec.yaml
+++ b/au_list_to_view_to_list/pubspec.yaml
@@ -1,4 +1,4 @@
-name: List.map().toList()
+name: list_to_view_to_list
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
