--- a/ar_dart_maps/pubspec.yaml
+++ b/ar_dart_maps/pubspec.yaml
@@ -1,4 +1,4 @@
-name: passing_functions_as_parms
+name: dart_maps
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
