--- a/bu_circleavitar_customfonts/src/pubspec.yaml
+++ b/bu_circleavitar_customfonts/src/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - images/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -88,6 +88,6 @@ flutter:
   fonts:
     - family: Chilanka-Regular
       fonts:
-        - asset: fonts/Chilanka-Regular.ttf
+        - asset: assets/fonts/Chilanka-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
